# LoadingIdicatorDisplay

./: TestUnicodeProg.cpp
ImitatorDisplay/: CMakeLists.txt  main.cpp  res  test1
display/: CMakeLists.txt  display  main.c  res  symbols.h  symbols.h.save
utilits/: BiToBy.py  ByToBi.py  font6x8  font8x8.txt  output.txt  output1.txt  tmp.py  tmp1.py
